--- a/default.hbs
+++ b/default.hbs
@@ -20,11 +20,11 @@
 
     {{{body}}}
 
-    <footer class="site-footer">
+    <footer class="site-footer" title="Proudly published with Ghost. Theme from http://sethlilly.com.">
         <div class="inner">
-             <section class="copyright">&copy; {{date format="YYYY"}} <a href="/">{{@blog.title}}</a>. All rights reserved.</section>
-             <section>Vapor theme by <a href="http://sethlilly.com/">Seth Lilly</a></section>
-             <section class="poweredby">Proudly published with <a class="icon-ghost" href="http://ghost.org"><span class="hidden">Ghost</span></a></section>
+            <section class="copyright">
+                &copy; {{date format="YYYY"}} <a href="/">{{@blog.title}}</a>. All rights reserved.
+            </section>
         </div>
     </footer>
 
