Add correct url

--- a/default.hbs
+++ b/default.hbs
@@ -25,7 +25,7 @@
     <footer class="site-footer" title="Proudly published with Ghost. Theme from http://sethlilly.com.">
         <div class="inner">
             <section class="copyright">
-                &copy; {{date format="YYYY"}} <a href="/">{{@blog.title}}</a>. All rights reserved.
+                &copy; {{date format="YYYY"}} <a href="http://linkerly.com">{{@blog.title}}</a>. All rights reserved.
             </section>
         </div>
     </footer>
